# FFBSteeringWheel

./: CMakeLists.txt  GEMINI.md  LICENSE  README.md  as5600_parser.cpp  as5600_parser.h  button_reader.cpp  button_reader.h  calibration.cpp  calibration.h  config.h  core1_entry.cpp  core1_entry.h  debug_serial.cpp  debug_serial.h  ffb_processor.cpp  ffb_processor.h  flash_storage.cpp  flash_storage.h  i2c_dma.cpp  i2c_dma.h  led_controller.cpp  led_controller.h  main.cpp  motor_control.cpp  motor_control.h  pedal_reader.cpp  pedal_reader.h  pico_sdk_import.cmake  shared_state.h  tusb_config.h  usb_descriptors.cpp  usb_ffb_descriptors.h  usb_hid.cpp  usb_hid.h
Docs/: pid_prompt.md  revised_prompt.md
